--- a/.gitattributes
+++ b/.gitattributes
@@ -95,4 +95,6 @@
 *.xd filter=lfs diff=lfs merge=lfs -crlf
 *.nef filter=lfs diff=lfs merge=lfs -crlf
 *.NEF filter=lfs diff=lfs merge=lfs -crlf
+*.cr2 filter=lfs diff=lfs merge=lfs -crlf
+*.CR2 filter=lfs diff=lfs merge=lfs -crlf
 
